--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "openai": "4.56.0"
+    "openai": "4.56.0",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.6.0",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1"
   }
 }
