--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "pdf-parse": "^1.1.1",
     "mammoth": "^1.6.0",
     "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1"
+    "html2canvas": "^1.4.1",
+    "@react-pdf/renderer": "^3.3.0",
+    "pdfjs-dist": "^4.4.168",
+    "tesseract.js": "^5.0.5"
   }
 }
