--- a/package.json
+++ b/package.json
@@ -19,4 +19,10 @@
     "pdfjs-dist": "^4.4.168",
     "tesseract.js": "^5.0.5"
   }
+{
+  "devDependencies": {
+    "tailwindcss": "^3.4.10",
+    "postcss": "^8.4.41",
+    "autoprefixer": "^10.4.20"
+  }
 }
