--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
   "name": "cv-ia-rescue",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "openai": "4.56.0",
-    "pdf-parse": "^1.1.1",
+    "@react-pdf/renderer": "^3.4.4",
     "mammoth": "^1.6.0",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
-    "@react-pdf/renderer": "^3.3.0",
-    "pdfjs-dist": "^4.4.168",
-    "tesseract.js": "^5.0.5"
-  }
-{
+    "next": "14.2.5",
+    "openai": "^4.52.0",
+    "pdf-parse": "^1.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.4.10",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.4.10"
   }
 }
