--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DB?sslmode=require
+# 🌐 Variables Neon
+NEXT_PUBLIC_STACK_PROJECT_ID=3e256026-57cc-4862-9180-f0d948410bf6
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=pck_zn1661ceq7yv9242tv6y5hgcfm948j4j0je3nc290t6g
+STACK_SECRET_SERVER_KEY=ssk_s954pq3t1h5y9g9q4pds0ab22drf75ncw12xdnfj5rz80
 
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=une_chaine_random
-GOOGLE_CLIENT_ID=xxxxx.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=xxxxxxx
+# 🧱 Base de données PostgreSQL (Neon)
+DATABASE_URL='postgresql://neondb_owner:********@ep-polished-bread-agg048v0-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require'
