--- a/.env
+++ b/.env
@@ -5,3 +5,16 @@ STACK_SECRET_SERVER_KEY=ssk_s954pq3t1h5y9g9q4pds0ab22drf75ncw12xdnfj5rz80
 
 # 🧱 Base de données PostgreSQL (Neon)
 DATABASE_URL='postgresql://neondb_owner:********@ep-polished-bread-agg048v0-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require'
+
+# --- Neon (déjà récupéré) ---
+DATABASE_URL='postgresql://USER:PASSWORD@HOST/neondb?sslmode=require'
+
+# --- NextAuth ---
+NEXTAUTH_URL=http://localhost:3000
+# génère une clé ici si besoin : https://generate-secret.vercel.app/32
+NEXTAUTH_SECRET=change-moi-avec-une-longue-cle
+
+# --- Provider Google (connexion en 1 clic) ---
+GOOGLE_CLIENT_ID=xxxxxxxx.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=xxxxxxxxxxxxxxxx
+
