--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@react-pdf/renderer": "^3.4.4",
     "@prisma/client": "^5.18.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "bcryptjs": "^2.4.3",
+    "mammoth": "^1.6.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "openai": "^4.52.0",
