--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "cv-ia-rescue",
-  "private": true,
-  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,22 +6,22 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^3.4.4",
-    "@prisma/client": "^5.18.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.18.0",
     "bcryptjs": "^2.4.3",
-    "mammoth": "^1.6.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
-    "openai": "^4.52.0",
-    "pdf-parse": "^1.1.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@react-pdf/renderer": "^3.4.4",
+    "mammoth": "^1.6.0",
+    "openai": "^4.52.0",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
+    "prisma": "^5.18.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "prisma": "^5.18.0"
+    "tailwindcss": "^3.4.10"
   }
 }
