--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://cv-ia-rescue.vercel.app/
 NEXTAUTH_SECRET=8b640f303cbd0331707624c421ce84ac
 AUTH_EMAIL=gaillardmaxime@outlook.com
 AUTH_PASSWORD=Mokka77120.
