--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
+DATABASE_URL='postgresql://neondb_owner:npg_g3VZCP7zilYk@ep-polished-bread-agg048v0-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require'
 NEXTAUTH_URL=https://cv-ia-rescue.vercel.app/
 NEXTAUTH_SECRET=8b640f303cbd0331707624c421ce84ac
 AUTH_EMAIL=gaillardmaxime@outlook.com
